--- a/src/components/Program/styleProgram.css
+++ b/src/components/Program/styleProgram.css
@@ -1,108 +1,357 @@
-.box_list {
-    background-color: #E7E9EB;
-    /* border: 1px solid red; */
-    border-radius: 20px;
-    height: 100%;
-    width: 25%;
-    padding: 17px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+@media screen and (max-width: 768px) {
+    .box_list {
+        background-color: #E7E9EB;
+        /* border: 1px solid red; */
+        border-radius: 20px;
+        height: 100%;
+        width: 100%;
+        padding: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .box_employee {
+        background-color: #fff;
+        display: flex;
+        padding: 2%;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        gap: 5%;
+        width: 96%;
+        height: 15%;
+        align-items: center;
+        cursor: pointer;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        text-align: center;
+    }
+
+    .box_price {
+        height: 80%;
+        width: 25%;
+        border: 1px solid #fff;
+        padding: 0 25px 0 25px;
+        border-radius: 12px;
+        background-color: rgba(255, 105, 0, 0.8);
+        color: #fff;
+        display: grid;
+    }
+
+    .box_event {
+        background-color: #E7E9EB;
+        /* border: 1px solid red; */
+        border-radius: 20px;
+        height: 100%;
+        width: 92%;
+        padding: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .box_price_event {
+        gap: 20px;
+        border: 1px solid #fff;
+        padding: 5px 10px 5px 10px;
+        border-radius: 15px;
+        background-color: rgba(255, 105, 0, 0.8);
+        color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        height: fit-content;
+        width: 100%;
+    }
+
+    .box_event_list {
+        background-color: #fff;
+        padding: 10px;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        gap: 9%;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .box_event_no {
+        font-size: 25px;
+        height: 100%;
+        width: fit-content;
+        background-color: #E7E9EB;
+        padding: 5px;
+        border-radius: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        white-space: nowrap;
+    }
+
+    ::-webkit-scrollbar {
+        width: 0;
+    }
+
+    .box_total_amount {
+        display: flex;
+        font-size: 3vh;
+        height: 13%;
+        padding: 5px;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #fff;
+        border-radius: 15px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .name {
+        background-color: #fff;
+        color: #000;
+        padding: 0px 5px;
+        border-radius: 10px;
+    }
+
+    .box_employee:hover {
+        background-color: rgba(255, 255, 255, .7);
+    }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 5px rgb(255, 105, 0);
+        background-color: red;
+        border-radius: 10px;
+    }
 }
 
-.box_employee {
-    background-color: #fff;
-    display: flex;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 20px;
-    gap: 9%;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+@media screen and (min-width: 769px) and (max-width: 1449px) {
+    .box_list {
+        background-color: #E7E9EB;
+        /* border: 1px solid red; */
+        border-radius: 20px;
+        height: 100%;
+        width: 100%;
+        padding: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .box_employee {
+        background-color: #fff;
+        display: flex;
+        padding: 2%;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        gap: 5%;
+        width: 96%;
+        height: 15%;
+        align-items: center;
+        cursor: pointer;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        text-align: center;
+    }
+
+    .box_price {
+        height: 80%;
+        width: 25%;
+        border: 1px solid #fff;
+        padding: 0 25px 0 25px;
+        border-radius: 12px;
+        background-color: rgba(255, 105, 0, 0.8);
+        color: #fff;
+        display: grid;
+    }
+
+    .box_event {
+        background-color: #E7E9EB;
+        /* border: 1px solid red; */
+        border-radius: 20px;
+        height: 100%;
+        width: 97%;
+        padding: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .box_price_event {
+        gap: 20px;
+        border: 1px solid #fff;
+        padding: 5px 10px 5px 10px;
+        border-radius: 15px;
+        background-color: rgba(255, 105, 0, 0.8);
+        color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        height: fit-content;
+        width: 22%;
+    }
+
+    .box_event_list {
+        background-color: #fff;
+        padding: 10px;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        gap: 9%;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .box_event_no {
+        font-size: 25px;
+        height: 100%;
+        width: fit-content;
+        background-color: #E7E9EB;
+        padding: 5px;
+        border-radius: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    ::-webkit-scrollbar {
+        width: 0;
+    }
+
+    .box_total_amount {
+        display: flex;
+        font-size: 3vh;
+        height: 13%;
+        padding: 5px;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #fff;
+        border-radius: 15px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
+
+    .name {
+        background-color: #fff;
+        color: #000;
+        padding: 0px 5px;
+        border-radius: 10px;
+    }
+
+    .box_employee:hover {
+        background-color: rgba(255, 255, 255, .7);
+    }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 5px rgb(255, 105, 0);
+        background-color: red;
+        border-radius: 10px;
+    }
 }
 
-.box_price {
-    gap: 20px;
-    border: 1px solid #fff;
-    padding: 0 25px 0 25px;
-    border-radius: 12px;
-    background-color: rgba(255, 105, 0, 0.8);
-    color: #fff;
+@media screen and (min-width: 1450px) {
 
-}
+    /* สไตล์สำหรับหน้าจอขนาดใหญ่ (เช่น คอมพิวเตอร์) */
+    .box_list {
+        background-color: #E7E9EB;
+        /* border: 1px solid red; */
+        border-radius: 20px;
+        height: 100%;
+        width: 25%;
+        padding: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
 
-.box_event {
-    background-color: #E7E9EB;
-    /* border: 1px solid red; */
-    border-radius: 20px;
-    height: 102%;
-    width: 70%;
-    padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
-}
+    .box_employee {
+        background-color: #fff;
+        display: flex;
+        padding: 2%;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        gap: 5%;
+        width: 96%;
+        height: 15%;
+        align-items: center;
+        cursor: pointer;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        text-align: center;
+    }
 
-.box_price_event {
-    gap: 20px;
-    border: 1px solid #fff;
-    padding: 5px 10px 5px 10px;
-    border-radius: 15px;
-    background-color: rgba(255, 105, 0, 0.8);
-    color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
-}
+    .box_price {
+        height: 80%;
+        width: 25%;
+        border: 1px solid #fff;
+        padding: 0 25px 0 25px;
+        border-radius: 12px;
+        background-color: rgba(255, 105, 0, 0.8);
+        color: #fff;
+        display: grid;
+    }
 
-.box_event_list {
-    background-color: #fff;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 20px;
-    gap: 9%;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
-}
+    .box_event {
+        background-color: #E7E9EB;
+        /* border: 1px solid red; */
+        border-radius: 20px;
+        height: 102%;
+        width: 70%;
+        padding: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
 
-.box_event_no {
-    font-size: 25px;
-    background-color: #E7E9EB;
-    padding: 5px;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
-}
+    .box_price_event {
+        gap: 20px;
+        border: 1px solid #fff;
+        padding: 5px 10px 5px 10px;
+        border-radius: 15px;
+        background-color: rgba(255, 105, 0, 0.8);
+        color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+        height: fit-content;
+        width: 22%;
+    }
 
-::-webkit-scrollbar {
-    width: 0;
-}
+    .box_event_list {
+        background-color: #fff;
+        padding: 10px;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        gap: 9%;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
 
-.box_total_amount {
-    display: flex;
-    font-size: 30px;
-    height: 13%;
-    padding: 5px;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid #fff;
-    border-radius: 15px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
-}
+    .box_event_no {
+        font-size: 25px;
+        background-color: #E7E9EB;
+        padding: 5px;
+        border-radius: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
 
-.name {
-    background-color: #fff;
-    color: #000;
-    padding: 0px 5px;
-    border-radius: 10px;
-}
+    ::-webkit-scrollbar {
+        width: 0;
+    }
 
-.box_employee:hover {
-    background-color: rgba(255, 255, 255, .7);
-}
+    .box_total_amount {
+        display: flex;
+        font-size: 3vh;
+        height: 13%;
+        padding: 5px;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #fff;
+        border-radius: 15px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .5)
+    }
 
-::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-}
+    .name {
+        background-color: #fff;
+        color: #000;
+        padding: 0px 5px;
+        border-radius: 10px;
+    }
 
-::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 5px rgb(255, 105, 0);
-    background-color: red;
-    border-radius: 10px;
+    .box_employee:hover {
+        background-color: rgba(255, 255, 255, .7);
+    }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 5px rgb(255, 105, 0);
+        background-color: red;
+        border-radius: 10px;
+    }
 }
