--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,22 +1,107 @@
-.body {
-    display: flex;
-    align-items: center;
-    height: 90px;
-    color: #fff;
-    background-color: #ff6900;
-    justify-content: space-between;
-    margin-bottom: 10px;
+@media screen and (max-width: 768px) {
+    .body {
+        display: flex;
+        align-items: center;
+        height: 90px;
+        color: #fff;
+        background-color: #ff6900;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    
+    .logo{
+        display: flex;
+        gap: 10px;
+        margin-left: 2%;
+        background-color:#fff;
+        padding:10px 15px;
+        border-radius:10px;
+        color:#000;
+        font-size: 18px;
+    }
+
+    .button {
+        /* background-color: rgba(0, 0, 0, 0.4); */
+        font-size: 15px;
+        cursor: pointer;
+        text-align: center;
+        border-radius: 5px;
+        padding: 10px;
+    }
+    
+    .button:hover {
+        font-size: 12px;
+    }
 }
 
-.button {
-    /* background-color: rgba(0, 0, 0, 0.4); */
-    font-size: 20px;
-    cursor: pointer;
-    text-align: center;
-    border-radius: 5px;
-    padding: 10px;
+@media screen and (min-width: 769px) and (max-width: 1449px) {
+    .body {
+        display: flex;
+        align-items: center;
+        height: 90px;
+        color: #fff;
+        background-color: #ff6900;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+
+    .logo{
+        display: flex;
+        gap: 20px;
+        margin-left: 2%;
+        background-color:#fff;
+        padding:10px 15px;
+        border-radius:10px;
+        color:#000;
+        font-size: 20px;
+    }
+    
+    .button {
+        /* background-color: rgba(0, 0, 0, 0.4); */
+        font-size: 20px;
+        cursor: pointer;
+        text-align: center;
+        border-radius: 5px;
+        padding: 10px;
+    }
+    
+    .button:hover {
+        font-size: 18px;
+    }
 }
 
-.button:hover {
-    font-size: 18px;
+@media screen and (min-width: 1450px) {
+    .body {
+        display: flex;
+        align-items: center;
+        height: 90px;
+        color: #fff;
+        background-color: #ff6900;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    
+    .logo{
+        display: flex;
+        gap: 20px;
+        margin-left: 2%;
+        background-color:#fff;
+        padding:10px 15px;
+        border-radius:10px;
+        color:#000;
+        font-size: 30px;
+    }
+    .button {
+        /* background-color: rgba(0, 0, 0, 0.4); */
+        font-size: 20px;
+        cursor: pointer;
+        text-align: center;
+        border-radius: 5px;
+        padding: 10px;
+    }
+    
+    .button:hover {
+        font-size: 18px;
+    }
 }
+
